# postgresql-ha-dr

./: .gitignore  CHANGELOG.md  README.md
api/: .env.example  Dockerfile  pyproject.toml  requirements.txt
api-go/: .env.example  Dockerfile  Makefile  go.mod
api-go/cmd/api/: main.go
api-go/internal/config/: config.go
api-go/internal/db/: postgres.go
api-go/internal/handlers/: backups.go  health.go  items.go  metrics.go
api-go/internal/models/: item.go
api-go/tests/: health_test.go
api/app/: __init__.py  config.py  main.py
api/app/db/: __init__.py  connection.py
api/app/models/: __init__.py  schemas.py
api/app/routers/: __init__.py  backups.py  health.py  items.py  metrics.py
api/tests/: conftest.py  test_backups.py  test_health.py  test_items.py
docs/: dr-runbook.md  ha-dr-concepts.md  monitoring.md  runbook-setup.md  secrets-management.md
keys/: .gitignore
scripts/: backup-full.sh  backup-incr.sh  chaos-test.sh  config.example.sh  create-cluster.sh  deploy-apis.sh  destroy-cluster.sh  install-exporters.sh  restore-pitr.sh  setup.sh  verify-backup.sh
sql/: init-database.sql
terraform/: .terraform.lock.hcl  api-server.tf  ec2-bastion.tf  ec2-etcd.tf  ec2-patroni.tf  ecr.tf  iam-backup.tf  keypair.tf  locals.tf  monitoring.tf  nlb.tf  outputs.tf  peering.tf  s3-backup.tf  security-groups.tf  terraform.tfvars.example  variables.tf  vpc.tf
terraform/dr-region/: main.tf  standby.tf  user-data-standby.sh.tpl  vpc-peering.tf  vpc.tf
terraform/scripts/: user-data-api.sh.tpl  user-data-monitoring.sh.tpl  user-data-patroni.sh.tpl
(+1 files in other folders)
